# Deep-Learning-Mini-Projects

D3-bar/: index.html  readme
D3-bar/js/: coffee.js
NeuralNetork/: networks.py
Regression/: regressor.py
interviewPrep/: Friends_circle.cpp  K_diff_pairs.py  Leetcode_Next_greater_element.cpp  abs_diff_min_tree.py  balance_smiley.cpp  byte_the_apple_hackerrank.py  climbingStaircase.cpp  concatentaestring.cpp  find_mode_binary_leetcode.py  island_parameter_leetcode.cpp  leetcode_duplicate_elem2_219.cpp  leetcode_duplicate_elem_217.cpp  leetcode_maximal_rectangle_85.py  reverseing_string_3_leetcode.cpp  web_crwaelr.py
tensorFlow/: CMakeLists.txt  linear_reg.cpp  linear_reg.h  main.cpp  vectorOp.cpp  vectorOp.h
